@@ -50,7 +50,8 @@ Library extunix
             resource.c, mman.c, time.c, pts.c, execinfo.c, malloc.c,
             endian.c, read_cred.c, fexecve.c, sendmsg.c,
             memalign.c, endianba.c, pread_pwrite_ba.c, bigarray.c,
-            splice.c, sysconf.c, common.c, common.h, sockopt.c, poll.c
+            splice.c, sysconf.c, common.c, common.h, sockopt.c, poll.c,
+            sysinfo.c
   BuildDepends: unix, bigarray
 
 Executable test
