@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 360d9a9fc578aa6df33713950d40069b) *)
+(* DO NOT EDIT (digest: 2a03d1315adc8699b1e5ada5a4547ba6) *)
 (*
    Regenerated by OASIS v0.4.4
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -739,7 +739,7 @@ module OASISVersion = struct
   type s = string
 
 
-  type t = string 
+  type t = string
 
 
   type comparator =
@@ -750,7 +750,7 @@ module OASISVersion = struct
     | VLesserEqual of t
     | VOr of  comparator * comparator
     | VAnd of comparator * comparator
-    
+
 
 
   (* Range of allowed characters *)
@@ -945,17 +945,17 @@ module OASISLicense = struct
 
 
 
-  type license = string 
+  type license = string
 
 
-  type license_exception = string 
+  type license_exception = string
 
 
   type license_version =
     | Version of OASISVersion.t
     | VersionOrLater of OASISVersion.t
     | NoVersion
-    
+
 
 
   type license_dep_5_unit =
@@ -964,19 +964,19 @@ module OASISLicense = struct
       excption:  license_exception option;
       version:   license_version;
     }
-    
+
 
 
   type license_dep_5 =
     | DEP5Unit of license_dep_5_unit
     | DEP5Or of license_dep_5 list
     | DEP5And of license_dep_5 list
-    
+
 
   type t =
     | DEP5License of license_dep_5
     | OtherLicense of string (* URL *)
-    
+
 
 
 end
@@ -991,10 +991,10 @@ module OASISExpr = struct
   open OASISGettext
 
 
-  type test = string 
+  type test = string
 
 
-  type flag = string 
+  type flag = string
 
 
   type t =
@@ -1004,10 +1004,10 @@ module OASISExpr = struct
     | EOr of t * t
     | EFlag of flag
     | ETest of test * string
-    
 
 
-  type 'a choices = (t * 'a) list 
+
+  type 'a choices = (t * 'a) list
 
 
   let eval var_get t =
@@ -1089,9 +1089,9 @@ module OASISText = struct
     | Para of string
     | Verbatim of string
     | BlankLine
-    
 
-  type t = elt list 
+
+  type t = elt list
 
 end
 
@@ -1102,40 +1102,40 @@ module OASISTypes = struct
 
 
 
-  type name          = string 
-  type package_name  = string 
-  type url           = string 
-  type unix_dirname  = string 
-  type unix_filename = string 
-  type host_dirname  = string 
-  type host_filename = string 
-  type prog          = string 
-  type arg           = string 
-  type args          = string list 
-  type command_line  = (prog * arg list) 
+  type name          = string
+  type package_name  = string
+  type url           = string
+  type unix_dirname  = string
+  type unix_filename = string
+  type host_dirname  = string
+  type host_filename = string
+  type prog          = string
+  type arg           = string
+  type args          = string list
+  type command_line  = (prog * arg list)
 
 
-  type findlib_name = string 
-  type findlib_full = string 
+  type findlib_name = string
+  type findlib_full = string
 
 
   type compiled_object =
     | Byte
     | Native
     | Best
-    
+
 
 
   type dependency =
     | FindlibPackage of findlib_full * OASISVersion.comparator option
     | InternalLibrary of name
-    
+
 
 
   type tool =
     | ExternalTool of name
     | InternalExecutable of name
-    
+
 
 
   type vcs =
@@ -1148,7 +1148,7 @@ module OASISTypes = struct
     | Arch
     | Monotone
     | OtherVCS of url
-    
+
 
 
   type plugin_kind =
@@ -1176,7 +1176,7 @@ module OASISTypes = struct
       ]
 
 
-  type 'a plugin = 'a * name * OASISVersion.t option 
+  type 'a plugin = 'a * name * OASISVersion.t option
 
 
   type all_plugin = plugin_kind plugin
@@ -1188,7 +1188,7 @@ module OASISTypes = struct
 (* # 115 "src/oasis/OASISTypes.ml" *)
 
 
-  type 'a conditional = 'a OASISExpr.choices 
+  type 'a conditional = 'a OASISExpr.choices
 
 
   type custom =
@@ -1196,7 +1196,7 @@ module OASISTypes = struct
         pre_command:  (command_line option) conditional;
         post_command: (command_line option) conditional;
       }
-      
+
 
 
   type common_section =
@@ -1205,7 +1205,7 @@ module OASISTypes = struct
         cs_data: PropList.Data.t;
         cs_plugin_data: plugin_data;
       }
-      
+
 
 
   type build_section =
@@ -1225,7 +1225,7 @@ module OASISTypes = struct
         bs_byteopt:         args conditional;
         bs_nativeopt:       args conditional;
       }
-      
+
 
 
   type library =
@@ -1236,28 +1236,28 @@ module OASISTypes = struct
         lib_findlib_parent:     findlib_name option;
         lib_findlib_name:       findlib_name option;
         lib_findlib_containers: findlib_name list;
-      } 
+      }
 
 
   type object_ =
       {
         obj_modules:            string list;
         obj_findlib_fullname:   findlib_name list option;
-      } 
+      }
 
 
   type executable =
       {
         exec_custom:          bool;
         exec_main_is:         unix_filename;
-      } 
+      }
 
 
   type flag =
       {
         flag_description:  string option;
         flag_default:      bool conditional;
-      } 
+      }
 
 
   type source_repository =
@@ -1269,7 +1269,7 @@ module OASISTypes = struct
         src_repo_branch:      string option;
         src_repo_tag:         string option;
         src_repo_subdir:      unix_filename option;
-      } 
+      }
 
 
   type test =
@@ -1280,7 +1280,7 @@ module OASISTypes = struct
         test_working_directory:  unix_filename option;
         test_run:                bool conditional;
         test_tools:              tool list;
-      } 
+      }
 
 
   type doc_format =
@@ -1291,7 +1291,7 @@ module OASISTypes = struct
     | Info of unix_filename
     | DVI
     | OtherDoc
-    
+
 
 
   type doc =
@@ -1307,7 +1307,7 @@ module OASISTypes = struct
         doc_format:      doc_format;
         doc_data_files:  (unix_filename * unix_filename option) list;
         doc_build_tools: tool list;
-      } 
+      }
 
 
   type section =
@@ -1318,7 +1318,7 @@ module OASISTypes = struct
     | SrcRepo    of common_section * source_repository
     | Test       of common_section * test
     | Doc        of common_section * doc
-    
+
 
 
   type section_kind =
@@ -1363,7 +1363,7 @@ module OASISTypes = struct
         disable_oasis_section:  unix_filename list;
         schema_data:            PropList.Data.t;
         plugin_data:            plugin_data;
-      } 
+      }
 
 
 end
@@ -6257,7 +6257,7 @@ module OCamlbuildCommon = struct
 
 
 
-  type extra_args = string list 
+  type extra_args = string list
 
 
   let ocamlbuild_clean_ev = "ocamlbuild-clean"
@@ -6574,7 +6574,7 @@ module OCamlbuildDocPlugin = struct
     {
       extra_args: string list;
       run_path: unix_filename;
-    } 
+    }
 
 
   let doc_build run pkg (cs, doc) argv =
@@ -6636,7 +6636,7 @@ module CustomPlugin = struct
         cmd_main:      command_line conditional;
         cmd_clean:     (command_line option) conditional;
         cmd_distclean: (command_line option) conditional;
-      } 
+      }
 
 
   let run  = BaseCustom.run
@@ -7004,7 +7004,8 @@ let setup_t =
                            "common.c";
                            "common.h";
                            "sockopt.c";
-                           "poll.c"
+                           "poll.c";
+                           "sysinfo.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
@@ -7190,7 +7191,7 @@ let setup_t =
        };
      oasis_fn = Some "_oasis";
      oasis_version = "0.4.4";
-     oasis_digest = Some "\226y]h\246np/j\167\164,6\140|\218";
+     oasis_digest = Some "\029j\187\002\136#;\179\2379k<;3j=";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -7198,6 +7199,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 7202 "setup.ml"
+# 7203 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
