@@ -1,3 +1,7 @@
+? - ?
+* New bindings :
+  * sysinfo
+
 0.1.1 - 18 May 2014
 * New bindings :
   * gettid
